--- a/website/css/style.css
+++ b/website/css/style.css
@@ -19,6 +19,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    overflow: hidden;
 }
 
 ul {
